<resources>
    <string name="app_name">Tackle Tac Toee</string>
    <string name="button">Button</string>
    <string name="button6">Button6</string>
    <string name="button8">Button8</string>
    <string name="button9">Button9</string>
    <string name="button10">Button10</string>
    <string name="button11">Button11</string>
    <string name="button4">Button4</string>
    <string name="button3">Button3</string>
    <string name="button7">Button7</string>
    <string name="tic_tac_toe">Tic Tac Toe</string>
    <string name="o">O</string>
    <string name="x">X</string>
    <string name="home">Home</string>
    <string name="score_board">Score Board</string>
    <string name="image">Image</string>
    <string name="textview">TextView</string>
    <string name="oo">O</string>
    <string name="xscore">xScore</string>
    <string name="xx">xx</string>
</resources>