<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.tackletactoee.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#DBABEF"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/button11"
            android:layout_width="123dp"
            android:layout_height="103dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="184dp"
            android:onClick="@{(view) -> viewModel.initiateDecisionMade(view)}"
            android:text="@string/button11"
            android:textColor="#E1BEE7"
            app:ticTacToe="@{viewModel.currentState.get(8)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/button10"
            app:layout_constraintTop_toBottomOf="@+id/button8"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/button10"
            android:layout_width="123dp"
            android:layout_height="103dp"
            android:layout_marginEnd="144dp"
            android:layout_marginBottom="288dp"
            android:onClick="@{(view) -> viewModel.initiateDecisionMade(view)}"
            android:text="@string/button10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/button7"
            app:layout_constraintTop_toBottomOf="@+id/button5"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/button9"
            android:layout_width="123dp"
            android:layout_height="103dp"
            android:layout_marginEnd="272dp"
            android:layout_marginBottom="184dp"
            android:onClick="@{(view) -> viewModel.initiateDecisionMade(view)}"
            android:text="@string/button9"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/button10"
            app:layout_constraintTop_toBottomOf="@+id/button8"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/button8"
            android:layout_width="123dp"
            android:layout_height="103dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="16dp"
            android:onClick="@{(view) -> viewModel.initiateDecisionMade(view)}"
            android:text="@string/button8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/button7"
            app:layout_constraintTop_toBottomOf="@+id/button5"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/button7"
            android:layout_width="123dp"
            android:layout_height="103dp"
            android:layout_marginEnd="144dp"
            android:layout_marginBottom="184dp"
            android:onClick="@{(view) -> viewModel.initiateDecisionMade(view)}"
            android:text="@string/button7"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/button10"
            app:layout_constraintTop_toBottomOf="@+id/button8"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/button6"
            android:layout_width="123dp"
            android:layout_height="103dp"
            android:layout_marginEnd="272dp"
            android:onClick="@{(view) -> viewModel.initiateDecisionMade(view)}"
            android:text="@string/button6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/button7"
            app:layout_constraintTop_toBottomOf="@+id/button5"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/button5"
            android:layout_width="123dp"
            android:layout_height="103dp"
            android:layout_marginEnd="16dp"
            android:onClick="@{(view) -> viewModel.initiateDecisionMade(view)}"
            android:text="@string/button"
            android:textColor="#E1BEE7"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.378"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/button4"
            android:layout_width="123dp"
            android:layout_height="103dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="144dp"
            android:onClick="@{(view) -> viewModel.initiateDecisionMade(view)}"
            android:text="@string/button4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.378"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/button3"
            android:layout_width="123dp"
            android:layout_height="103dp"
            android:layout_marginEnd="272dp"
            android:onClick="@{(view) -> viewModel.initiateDecisionMade(view)}"
            android:text="@string/button3"
            app:ticTacToe="@{viewModel.currentState.get(0)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.378"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:fontFamily="cursive"
            android:text="@string/tic_tac_toe"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            android:onCheckedChanged="@{(radioGroup, checkId) -> viewModel.onPlayerChecked(checkId)}">

            <RadioButton
                android:id="@+id/player_x"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/x"
                android:textColor="#37474F"
                tools:ignore="TextContrastCheck" />

            <RadioButton
                android:id="@+id/player_o"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/o"
                tools:ignore="TextContrastCheck" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>