<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WinnerPage">

    <Button
        android:id="@+id/backToHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="44dp"
        android:text="@string/home"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/purple_background" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:lineSpacingExtra="8sp"
        android:text="@string/score_board"
        android:textSize="50sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="57dp" />

    <TextView
        android:id="@+id/pointO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="oScore"
        tools:layout_editor_absoluteX="249dp"
        tools:layout_editor_absoluteY="564dp" />

    <TextView
        android:id="@+id/pointX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xscore"
        tools:layout_editor_absoluteX="107dp"
        tools:layout_editor_absoluteY="564dp" />

    <TextView
        android:id="@+id/x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="xx"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="120dp"
        tools:layout_editor_absoluteY="513dp"
        tools:text="X" />

    <TextView
        android:id="@+id/Ologo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oo"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="260dp"
        tools:layout_editor_absoluteY="513dp"
        tools:text="O" />

</androidx.constraintlayout.widget.ConstraintLayout>